--- a/Zaheen/style.css
+++ b/Zaheen/style.css
@@ -132,11 +132,12 @@ a{
     width: 60%;
     padding: 40px;
     border-radius: 15%;
-    font-size: 20ox;
+    font-size: 20px;
     max-height: 50vh;
     max-width: 100%;
     letter-spacing: 1px;
     line-height: 30px;
+
 }
 .table{
     background: url(./images/bmw.jpg);
@@ -178,6 +179,21 @@ table{
     font-size: 20px;
     text-align: center;
 }
+
+@media screen and (max-width: 1000px){
+    .description-p{
+        font-size: 3vh;
+        font-size: 3vw;
+        width: fit-content;
+    }
+    .table table td, th{
+        font-size: 2vh;
+        font-size: 2vw;
+        width: fit-content;
+    }
+
+}
+
 
 /* Gallery */
 
