--- a/Projects/WebDevAss/styles/style.css
+++ b/Projects/WebDevAss/styles/style.css
@@ -71,7 +71,6 @@ a{
    background-repeat: no-repeat;
    background-position: center center;
    background-color: black; 
-   padding: 50px; 
 }
 
 .home-banner{
@@ -83,8 +82,8 @@ a{
     width: 70%;
     height: fit-content;
     top: 50%;
-    right: 25%;
-    transform: translate(50%,-50%);
+    right: 50%;
+    transform: translate(90%,-50%);
 }
 
 .title{
@@ -92,7 +91,7 @@ a{
     z-index: 5000;
     display: flex;
     color:rgb(250, 235, 215, 0.9);
-    font-size: 600%;
+    font-size: 12vh;
     text-align: justify;
     display: flex;
     justify-content: center;
@@ -178,7 +177,7 @@ table{
     border: 1px solid rgb(255, 255, 255);
     color: aqua;
     border-radius: 9px;
-    padding: 13px 33px;
+    padding: 1vh 2vh;
     font-size: 20px;
     text-align: center;
 }
@@ -193,6 +192,11 @@ table{
         font-size: 2vh;
         font-size: 2vw;
         width: fit-content;
+    }
+    .home-banner{
+        top: 50%;
+        right: 50%;
+        transform: translate(50%,-50%);
     }
 
 }
