--- a/Projects/WebDevAss/styles/style.css
+++ b/Projects/WebDevAss/styles/style.css
@@ -31,14 +31,21 @@ a{
     z-index: 2222;
     padding: 2px 10px;
     border-radius: 50px;
+    padding: 3px 12px;
     transition: all 0.4s ease-in-out;
+
 
 }
 .nav-link:hover{
-    background-color: rgba(61, 60, 60, 0.5);
+    background-color: rgba(66, 63, 63, 0.7);
     border-radius: 50px;
-    padding: 2px 10px;
-    color: rgb(241, 210, 171);
+    padding: 3px 12px;
+    color: rgb(241, 200, 150);
+
+}
+
+.active{
+    color: rgb(241, 200, 150);
 
 }
 
@@ -50,7 +57,7 @@ a{
 
 
 .nav{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0, 0.8);
     height: 5vh;
     width: 100%;
     font-size: 100%;
