--- a/Projects/Portfolio/style.css
+++ b/Projects/Portfolio/style.css
@@ -36,6 +36,7 @@ nav, a{
     justify-content: center;
     font-weight: 400;
     letter-spacing: 4px;
+    cursor:pointer;
 }
 
 
@@ -66,13 +67,13 @@ nav, a{
     border-bottom: 0.5px solid #282828;
 }
 
-.nav span{
+.nav{
     transition: all 0.25s ease-out;
     cursor: pointer;
   
 }
 
-.nav span:hover{
+.nav:hover{
     color: rgb(220, 220, 195);
     
 }
@@ -158,12 +159,82 @@ nav, a{
     
 }
 
+section{
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s ease-in-out;
+}
+
+.sec1{
+    display: none;
+    background-color: inherit;
+}
+.sec2{
+    display: none;
+    background-color: inherit;
+}
+
+.sec3{
+    display: none;
+    background-color: rgb(21, 90, 90);
+}
+.sec4{
+    display: none;
+    background-color: rgb(234, 96, 96);
+}
+.sec5{
+    display: none;
+    background-color: rgb(59, 223, 0);
+}
+.sec6{
+    display: none;
+    background-color: rgb(41, 16, 198);
+}
+
+.active{
+    display: block;
+}
 
 
 .active-btn{
     color: bisque;
 }
 
+
+
+/* ABOUT SECTION */
+
+#about-p {
+    display: flex;
+    color: whitesmoke;
+    align-items: center;
+    justify-content: center;
+    height: 700px;
+    cursor: default;
+}
+
+#about-p p{
+    width: 60%;
+    font-size: 20px;
+    letter-spacing: 3px;
+    line-height: 34px;
+    text-align: justify;
+
+}
+#i{
+    transition: all 0.3s ease-out;
+    font-size: 40px;
+    position: absolute;
+    transform: translateY(-5px);
+}
+
+#about-p p:hover{
+    #i{
+        color: bisque;
+        animation: animate 0.6s;
+    }
+    
+}
 
 
 
