--- a/Projects/Portfolio/style.css
+++ b/Projects/Portfolio/style.css
@@ -3,11 +3,71 @@
     margin: 0%;
     box-sizing: border-box;
 }
+
+
+/* Error Page For Mobile Users */
+.mobile{
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: #1d1d1d;
+    z-index: 10;
+    text-align: center;
+    overflow: hidden;
+}
+
+.error-container{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
+}
+
+.mobile h1{
+    width: 100%;
+    height: fit-content;
+    font-size: 35vw;
+    color: rgb(255, 227, 194, 0.4);
+    transition: all 0.25s ease-in-out;
+
+}
+
+.mobile img{
+    transition: all 0.3s ease-in-out;
+    width: 60px;
+
+}
+
+
+.mobile h1:hover{
+    color: rgb(255, 227, 194, 0.8);
+    .mobile img{
+        transform: scale(1.2);
+    }
+
+}
+
+.mobile p{
+    margin-top: 10%;
+    letter-spacing: 0.6vw;
+    font-size: 2.5vw;
+    color: rgb(255, 227, 194, 0.7);
+
+}
+
+
+
+
+
+
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #1d1d1d;
 
 }
+
+
 nav, a{
     text-decoration: none;
     color: #909096;
@@ -249,9 +309,12 @@ section{
     color: bisque;
 }
 
-#i:hover{
-    animation: vibrate 2s infinite alternate ;
+.sec2:hover{
+    #i{
+        animation: animate 0.4s ease-in-out ;
+    }
 }
+
 
 /* body:hover{
     #i{
@@ -312,6 +375,12 @@ section{
         width: fit-content;
     }
     #side-bar{
+        display: none;
+    }
+    .mobile{
+        display: block;
+    }
+    #main{
         display: none;
     }
 
