--- a/Projects/Portfolio/style.css
+++ b/Projects/Portfolio/style.css
@@ -75,6 +75,16 @@ nav, a{
 
 }
 
+.mnzr-logo{
+    background-image: url("res/MNZR\ black.png");
+    width: 135px;
+    height: 25vh;
+    background-size: cover; 
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-color: black;
+    
+}
 
 #side-bar{
     background-color: #181818;
@@ -84,7 +94,7 @@ nav, a{
     position: fixed;
     min-height: min-content;
 }
-
+/* 
 #logo{
     background-color: rgb(0, 0, 0);
     color:rgb(236, 236, 219);
@@ -96,7 +106,7 @@ nav, a{
     font-weight: 400;
     letter-spacing: 4px;
     cursor:pointer;
-}
+} */
 
 
 
@@ -395,7 +405,6 @@ section{
         transform: translateY(0);
     }
 }
-
 
 
 
