--- a/Projects/CODSoft/L1/style.css
+++ b/Projects/CODSoft/L1/style.css
@@ -176,6 +176,22 @@ body{
     
 }
 
+.featured-container{
+    background: url(./res/Station.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 500px;
+    margin: auto 50px;
+    border-radius: 15px;
+    color: #f1f1f1;
+}
+
+.featured-container:hover{
+    font-size: 20px;
+    font-weight: 500;
+}
+
 .featured-products div{
     padding: 40px 50px;
     width: 100%;
