--- a/Projects/CODSoft/L1/style.css
+++ b/Projects/CODSoft/L1/style.css
@@ -114,6 +114,7 @@ body{
 .learnmore-btn{
     margin-left: 80%;
     margin-top: 15vh;
+    text-decoration: none;
 }
 
 .learnmore-btn .btn:hover{
@@ -182,14 +183,14 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     height: 400px;
-    margin: auto 50px;
+    margin: auto 10px auto 100px;
     border-radius: 15px;
     color: #f1f1f1;
+    cursor: default;
 }
 
 .featured-container:hover{
-    font-size: 20px;
-    font-weight: 500;
+    color: #FAFAFA;
 }
 
 .featured-products div{
