--- a/Projects/ZeroHunger WebSite/Style/style.css
+++ b/Projects/ZeroHunger WebSite/Style/style.css
@@ -36,6 +36,7 @@ header{
     justify-content: space-between;
     align-items: center;
     z-index: 10;
+    top: 0;
 }
 
 .logo_con{
@@ -102,316 +103,26 @@ img{
 }
 
 .nav_link:hover{
-    /* background-color: #1e1e1e2d; */
-    /* .nav_line{
-        display: block;
-        animation: line .5s forwards;
-    } */
+    border-bottom: 3px solid #DDA83A;
+    box-sizing: border-box;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
+.active{
     border-bottom: 3px solid #DDA83A;
     box-sizing: border-box;
     background-color: rgba(0, 0, 0, 0.115);
 }
 
-.active{
-    .nav_line{
-        display: block;
-        animation: line .5s forwards;
-    }
-}
-
-
-
-/* HERO PAGE */
-.hero_section{
-    height: 100vh;
-    width: 100%;
-    background: url(../Images/BackgroundFood.png);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #1e1e1e;
-    z-index: 1;
-    position: relative;
-    overflow: hidden;
-}
-
 section{
-    width: 100%;
-    height: 93vh;
-}
-
-
-.right_hero .rectangle{
-    height: 250%;
-    width: 50%;
-    max-width: 500px;
-    background-color: #DDA83A;
-    position: absolute;
-    top: 0;
-    right: -210px;
-    transform-origin: top right;
-    transform: rotate(15deg);
-    z-index: 1;
-
-}
-
-
-.right_hero .label{
-    font-size:  4vw;
-    line-height: 3.3vw;
-    text-align: right;
-    z-index: 4;
-    color: white;
-    font-weight: 600;
-    position: absolute;
-    top: 35%;
-    right: 5%;
-    transform-origin: top right;
-}
-
-.zerohunger_image{
-    height: fit-content;
-    width: fit-content;
-    font-size:  3vw;
-    z-index: 4;
-    color: #1e1e1e;
-    font-weight: 600;
-    position: absolute;
-    top: 50%;
-    right: 2%;
-    transform-origin: top right;
-}
-
-.zerohunger_image img{
-    width: 22vw;
-    height: auto;
-}
-
-.main_hero{
-    position: absolute;
-    top: 18%;
-    right: 35%;
-}
-
-.main_hero .head{
-    font-size: 10.5vw;
-    font-weight: 800;
-    line-height: 8vw;
-    
-}
-
-.main_hero .pre_head{
-    font-size: 1.5vw;
-    font-weight: 300;
-    font-style: italic;
-    padding-bottom: 30px;
-}
-
-.main_hero .subhead{
-    font-size: 2vw;
-    font-weight: 400;
-    padding-top: 50px;
-}
-
-
-
-/* ABOUT SECTION */
-
-
-.about_us{
-    background-color: whitesmoke;
-    width: 100%;
-    height: 50vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
-
-.about_us p{
-    width: 60%;
-    padding: 15px 5px;
-    text-align: center;
-    font-size: 18px;
-}
-
-
-.about_section{
-    background-color: E9E5E3;
-    height: fit-content;
-}
-
-.about_section h3{
-    font-size: 40px;
-    font-weight: 600;
-    text-align: center;
-}
-
-.ab_h_pad{
-    margin-bottom: 30px;
-}
-.ab_c_pad{
-    margin-bottom: 70px;
-}
-
-.about{
-    width: 100%;
-    height: 60vh;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    overflow: hidden;
-}
-
-.about .about_head{
-    width: 30%;
-    height: 60%;
-    background-color: #05ABAD;
-    border-radius: 15px;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-
-.about .about_content{
-    width: 40%;
-    font-size: 18px;
-    line-height: 28px;
-    text-align: center;
-    min-height: 200px;
-}
-.about .about_content h3{
-    padding: 0px 18px 18px 18px;
-    border-bottom: 2.5px solid #DDA83A;
-    border-radius: 50px;
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-}
-.about ul{
-    padding: 20px 30px;
-    font-size: 16px;
-    text-align: left;
-    margin: auto;
-}
-
-.about_head1{
-    background-image: url(../Images/ab_bg_1.jpg);
-}
-.about_head2{
-    background-image: url(../Images/ab_bg_2.jpg);
-}
-.about_head3{
-    background-image: url(../Images/ab_bg_3.jpg);
-}
-.about_head4{
-    background-image: url(../Images/ab_bg_4.jpg);
-}
-.about_head5{
-    background-image: url(../Images/ab_bg_5.jpg);
-}
-
-
-.gallery_section{
-    background-color: #1e1e1e;
-    color: #e9e5e3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    width: 100%;
     height: 100vh;
-    padding-top: 7vh;
-}
-
-.gal_content p{
-    padding: 50px;
-    text-align: center;
-    font-weight: 100;
-    font-size: 18px;
-}
-
-.gallery_section h3{
-    font-size: 40px;
-    text-align: center;
-    padding: 20px;
-    font-weight: 500;
-    letter-spacing: 1.5px;
-}
-
-.gallery_container{
-    width: 200vw;
-    height: 80vh;
-    background-color: #1e1e1e;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    margin-right: 20px;
-}
-
-.gallery_container a{
-    background-color: #1e1e1e;
-    margin: 6px;
-    text-decoration: none;
-    color: #e9e5e3;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    border: 1px solid black;
-
-    border-bottom: 2px solid #dda73ad7;
-    border-radius: 10px;
-    transition: all 0.3s ease-in-out;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.gallery_container a::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); /* Adjust opacity as needed */
+    background-color: #e9e5e3;
 }
 
-.gallery_container a:hover{
-    transform: scale(1.03);
 
-}
 
-.gallery_container .item1{
-    background-image: url(../Images/grid1.jpg);
-}
-.gallery_container .item2{
-    background-image: url(../Images/grid2.jpeg);
-}
-.gallery_container .item3{
-    background-image: url(../Images/grid3.jpg);
-}
-.gallery_container .item4{
-    background-image: url(../Images/grid4.jpg);
-}
 
-.gal_con{
-    color: white;
-    font-size: 50px;
-    width: fit-content;
-    height: fit-content;
-    z-index: 5;
-    font-weight: 900;
-
-}
 
 
 
