--- a/Projects/ZeroHunger WebSite/Style/home.css
+++ b/Projects/ZeroHunger WebSite/Style/home.css
@@ -1,20 +1,7 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-body{
-    font-family: "Poppins", sans-serif;
-    height: 100%;
-    width: 100%;
-    overflow-x: hidden;
-    cursor: default;
-
-}
 
 
 /* HERO PAGE */
-.hero_section{
+.hero-section{
     height: 100vh;
     width: 100%;
     background: url(../Images/bg1.jpg);
@@ -28,7 +15,7 @@ body{
     color: white;
 }
 
-.hero_section::after{
+.hero-section::after{
     content: "";
     position: absolute;
     top: 0;
@@ -44,7 +31,7 @@ section{
 }
 
 
-.right_hero .rectangle{
+.right-hero .rectangle{
     height: 250%;
     width: 50%;
     max-width: 500px;
@@ -59,7 +46,7 @@ section{
 }
 
 
-.right_hero .label{
+.right-hero .label{
     font-size:  4vw;
     line-height: 3.3vw;
     text-align: center;
@@ -72,7 +59,7 @@ section{
     transform-origin: top right;
 }
 
-.zerohunger_image{
+.zerohunger-image{
     height: fit-content;
     width: fit-content;
     font-size:  3vw;
@@ -85,12 +72,12 @@ section{
     transform-origin: top right;
 }
 
-.zerohunger_image img{
+.zerohunger-image img{
     width: 22vw;
     height: auto;
 }
 
-.main_hero{
+.main-hero{
     position: absolute;
     top: 18%;
     right: 35%;
@@ -98,21 +85,21 @@ section{
     color: rgb(255, 255, 255);
 }
 
-.main_hero .head{
+.main-hero .head{
     font-size: 10.5vw;
     font-weight: 800;
     line-height: 8vw;
     
 }
 
-.main_hero .pre_head{
+.main-hero .pre-head{
     font-size: 1.5vw;
     font-weight: 300;
     font-style: italic;
     padding-bottom: 30px;
 }
 
-.main_hero .subhead{
+.main-hero .subhead{
     font-size: 2vw;
     font-weight: 400;
     padding-top: 50px;
@@ -123,7 +110,7 @@ section{
 /* ABOUT SECTION */
 
 
-.about_us{
+.about-us{
     background-color: whitesmoke;
     width: 100%;
     height: 50vh;
@@ -133,7 +120,7 @@ section{
     overflow: hidden;
 }
 
-.about_us p{
+.about-us p{
     width: 60%;
     padding: 15px 5px;
     text-align: center;
@@ -141,21 +128,21 @@ section{
 }
 
 
-.about_section{
+.about-section{
     background-color: E9E5E3;
     height: fit-content;
 }
 
-.about_section h3{
+.about-section h3{
     font-size: 40px;
     font-weight: 600;
     text-align: center;
 }
 
-.ab_h_pad{
+.ab-h-pad{
     margin-bottom: 30px;
 }
-.ab_c_pad{
+.ab-c-pad{
     margin-bottom: 70px;
 }
 
@@ -169,7 +156,7 @@ section{
     overflow: hidden;
 }
 
-.about .about_head{
+.about .about-head{
     width: 30%;
     height: 60%;
     background-color: #05ABAD;
@@ -186,14 +173,14 @@ section{
 }
 
 
-.about .about_content{
+.about .about-content{
     width: 40%;
     font-size: 18px;
     line-height: 28px;
     text-align: center;
     min-height: 200px;
 }
-.about .about_content h3{
+.about .about-content h3{
     padding: 0px 18px 18px 18px;
     border-bottom: 2.5px solid #DDA83A;
     border-radius: 50px;
@@ -208,24 +195,24 @@ section{
     margin: auto;
 }
 
-.about_head1{
+.about-head1{
     background-image: url(../Images/ab_bg_1.jpg);
 }
-.about_head2{
+.about-head2{
     background-image: url(../Images/ab_bg_2.jpg);
 }
-.about_head3{
+.about-head3{
     background-image: url(../Images/ab_bg_3.jpg);
 }
-.about_head4{
+.about-head4{
     background-image: url(../Images/ab_bg_4.jpg);
 }
-.about_head5{
+.about-head5{
     background-image: url(../Images/ab_bg_5.jpg);
 }
 
 
-.gallery_section{
+.gallery-section{
     background-color: #1e1e1e;
     color: #e9e5e3;
     display: flex;
@@ -237,14 +224,14 @@ section{
     padding-top: 7vh;
 }
 
-.gal_content p{
+.gal-content p{
     padding: 50px;
     text-align: center;
     font-weight: 100;
     font-size: 18px;
 }
 
-.gallery_section h3{
+.gallery-section h3{
     font-size: 40px;
     text-align: center;
     padding: 20px;
@@ -252,7 +239,7 @@ section{
     letter-spacing: 1.5px;
 }
 
-.gallery_container{
+.gallery-container{
     width: 200vw;
     height: 80vh;
     background-color: #1e1e1e;
@@ -261,7 +248,7 @@ section{
     margin-right: 20px;
 }
 
-.gallery_container a{
+.gallery-container a{
     background-color: #1e1e1e;
     margin: 6px;
     text-decoration: none;
@@ -280,7 +267,7 @@ section{
     align-items: center;
 }
 
-.gallery_container a::after {
+.gallery-container a::after {
     content: "";
     position: absolute;
     top: 0;
@@ -290,25 +277,40 @@ section{
     background-color: rgba(0, 0, 0, 0.7);
 }
 
-.gallery_container a:hover{
+.gallery-container a:hover{
     transform: scale(1.02);
 
 }
 
-.gallery_container .item1{
+.gallery-container .item1{
     background-image: url(../Images/grid1.jpg);
 }
-.gallery_container .item2{
+.gallery-container .item2{
     background-image: url(../Images/grid2.jpeg);
 }
-.gallery_container .item3{
+.gallery-container .item3{
     background-image: url(../Images/grid3.jpg);
 }
-.gallery_container .item4{
-    background-image: url(../Images/grid4.jpg);
+.gallery-container .item4{
+    background-image: url(../Images/grid4l.jpg);
 }
 
-.gal_con{
+.gal-content p a{
+    font-size: 14px;
+    font-weight: 300;
+    color: #dda73ab3;
+    text-decoration: none;
+    border-bottom: 0.5px solid #dda73ab3;
+    transition: all 0.25s ease-in-out;
+}
+
+.gal-content p a:hover{
+    color: #dda73a;
+    border-bottom: 0.5px solid #dda73a;
+}
+
+
+.gal-con{
     color: white;
     font-size: 50px;
     width: fit-content;
